# storage/api-docs/api-docs.json
@@ -732,14 +732,14 @@
                 ]
             }
         },
-        "/api/contacts/{company_id}/contacts": {
+        "/api/companies/{company_id}/contacts": {
             "get": {
                 "tags": [
                     "Contacts"
                 ],
                 "summary": "Get all contacts from a company",
                 "description": "Returns a list of contacts associated with a company.",
-                "operationId": "fb13822374ebfde2ba1b321780dbeffb",
+                "operationId": "e0f2a38c28a3c847b023463b97a40c63",
                 "parameters": [
                     {
                         "name": "company_id",
@@ -805,11 +805,11 @@
                 "tags": [
                     "Contacts"
                 ],
-                "summary": "Crear un nuevo contacto",
-                "description": "Registra un nuevo contacto en el sistema",
+                "summary": "Create a new contact",
+                "description": "Create a new contact in the system",
                 "operationId": "a3b0baf957a16c1ed505f2e8985c254c",
                 "requestBody": {
-                    "description": "Datos del nuevo contacto",
+                    "description": "Contact data",
                     "required": true,
                     "content": {
                         "application/json": {
@@ -824,35 +824,40 @@
                                 ],
                                 "properties": {
                                     "company_id": {
-                                        "description": "ID de la empresa",
+                                        "description": "Company ID",
                                         "type": "integer",
                                         "example": 1
                                     },
                                     "first_name": {
-                                        "description": "Nombre del contacto",
+                                        "description": "Contact's first name",
                                         "type": "string",
                                         "example": "John"
                                     },
                                     "last_name": {
-                                        "description": "Apellido del contacto",
+                                        "description": "Contact's last name",
                                         "type": "string",
                                         "example": "Doe"
                                     },
                                     "position": {
-                                        "description": "Posición del contacto en la empresa",
+                                        "description": "Contact's position in the company",
                                         "type": "string",
                                         "example": "CEO"
                                     },
                                     "email": {
-                                        "description": "Correo electrónico del contacto",
+                                        "description": "Contact's email",
                                         "type": "string",
                                         "format": "email",
                                         "example": "john.doe@example.com"
                                     },
                                     "phone": {
-                                        "description": "Número de teléfono del contacto",
+                                        "description": "Contact's phone number",
                                         "type": "string",
                                         "example": "+123456789"
+                                    },
+                                    "note": {
+                                        "description": "Additional note",
+                                        "type": "string",
+                                        "example": "Additional Note"
                                     }
                                 },
                                 "type": "object"
@@ -862,7 +867,7 @@
                 },
                 "responses": {
                     "201": {
-                        "description": "Contacto creado exitosamente",
+                        "description": "Contact created successfully",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -886,7 +891,7 @@
                         }
                     },
                     "422": {
-                        "description": "Error de validación",
+                        "description": "Validation error",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -1191,6 +1196,134 @@
                     }
                 ]
             }
+        },
+        "/api/notes/{id}": {
+            "get": {
+                "tags": [
+                    "Notes"
+                ],
+                "summary": "Get a note by id",
+                "description": "Returns a note by id",
+                "operationId": "4f26c25d4040d0ef0fa8d8a5ea9fa4da",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of note to return",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "noteable_id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "noteable_type": {
+                                                    "type": "string",
+                                                    "example": "App\\Models\\Company"
+                                                },
+                                                "content": {
+                                                    "type": "string",
+                                                    "example": "This is a note"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Note not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Note not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Notes"
+                ],
+                "summary": "Delete a note",
+                "description": "Deletes a note by id",
+                "operationId": "99b63679b2822651f8f0ae585f927f0b",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of note to delete",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Note deleted successfully"
+                    },
+                    "404": {
+                        "description": "Note not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Note not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -1214,6 +1347,10 @@
         {
             "name": "Contacts",
             "description": "Contacts"
+        },
+        {
+            "name": "Notes",
+            "description": "Notes"
         }
     ]
 }
